front:stdcm: align things in sillons menus fixes #4481 https://github.com/osrd-project/osrd/issues/4481 front:stdcm: update classes for stdcm

--- a/front/src/styles/scss/common/components/_typeAndPath.scss
+++ b/front/src/styles/scss/common/components/_typeAndPath.scss
@@ -1,5 +1,6 @@
 .type-and-path {
   position: relative;
+
   background-color: var(--white);
   padding: 0.5rem;
   border-radius: var(--border-radius);
@@ -7,7 +8,6 @@
     position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
     height: 5rem;
     max-width: 21vw;
     overflow: auto;
